feat: add quantity selector script

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -132,4 +132,7 @@
 {% block extra_js %}
     <!-- Scroll to Top JS -->
     <script src="{% static 'js/scroll_top.js' %}"></script>
+
+    <!-- Quantity Input JS -->
+    <script src="{% static 'js/quantity_input.js' %}"></script>
 {% endblock %}
