--- a/products/templates/products/product_detail.html
+++ b/products/templates/products/product_detail.html
@@ -88,22 +88,21 @@
                 <div class="product-page-quantity my-4">
                     <p class="mt-3 mb-1 weight-semibold">Quantity</p>
                     <div class="form-group w-50">
-                        <div class="input-group">
+                        <div class="input-group input-group-{{ product.id }}">
                             <div class="input-group-prepend">
-                                <button class="decrement-qty bg-blue text-ib-light weight-bold btn rounded-0" data-item_id="{{ product.id }}" id="decrement-qty_{{ product.id }}">
+                                <button class="decrement-qty bg-blue text-ib-light weight-bold btn rounded-0 decrement-qty_{{ product.id }}" data-item_id="{{ product.id }}">
                                     <i class="fas fa-minus"></i>
                                 </button>
                             </div>
-                            <input class="form-control qty_input ib-form-field font-body weight-semibold" type="number"
+                            <input class="form-control qty_input ib-form-field font-body weight-semibold id_qty_{{ product.id }}" type="number"
                                 name="quantity"
                                 value="1"
                                 min="1"
                                 max="99"
-                                data-item_id="{{ product.id }}"
-                                id="id_qty_{{ product.id }}">
+                                data-item_id="{{ product.id }}">
                             <div class="input-group-append">
-                                <button class="increment-qty bg-blue text-ib-light weight-bold btn rounded-0"
-                                    data-item_id="{{ product.id }}" id="increment-qty_{{ product.id }}">
+                                <button class="increment-qty bg-blue text-ib-light weight-bold btn rounded-0 increment-qty_{{ product.id }}"
+                                    data-item_id="{{ product.id }}">
                                     <i class="fas fa-plus"></i>
                                 </button>
                             </div>
@@ -227,8 +226,10 @@
 
 </div>
 
+{% endblock %}
 
-
-
+{% block extra_js %}
+    <!-- Quantity Input JS -->
+    <script src="{% static 'js/quantity_input.js' %}"></script>
 {% endblock %}
 
