--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -57,13 +57,6 @@
                             </div>
                             <div class="row"><div class="col my-3"><hr></div></div>
                         {% endfor %}
-
-                        <!-- Back to Top Button -->
-                        <div id="btt-btn">
-                            <a class="text-dark-grey weight-bold font-title text-decoration-none shadow-sm h-100 w-100 d-flex justify-content-center align-items-center">
-                                <i class="fa fa-arrow-up"></i>
-                            </a>
-                        </div>
                     </div>
                     
                     <!-- Non-Mobile Bag View -->
@@ -123,6 +116,13 @@
                     </a>
                 {% endif %}
 
+                <!-- Back to Top Button -->
+                <div id="btt-btn">
+                    <a class="text-dark-grey weight-bold font-title text-decoration-none shadow-sm h-100 w-100 d-flex justify-content-center align-items-center">
+                        <i class="fa fa-arrow-up"></i>
+                    </a>
+                </div>
+
             </div>
         </div>
     </div>
@@ -135,4 +135,25 @@
 
     <!-- Quantity Input JS -->
     <script src="{% static 'js/quantity_input.js' %}"></script>
+
+    <script type="text/javascript">
+        // Update quantity on click
+        $('.update-link').click(function(e) {
+            var form = $(this).prev('.update-form');
+            form.submit();
+        })
+    
+        // Remove item and reload on click
+        $('.remove-item').click(function(e) {
+            var csrfToken = "{{ csrf_token }}";
+            var itemId = $(this).attr('id').split('remove_')[1];
+            var url = `/bag/remove/${itemId}/`;
+            var data = {'csrfmiddlewaretoken': csrfToken};
+    
+            $.post(url, data)
+             .done(function() {
+                 location.reload();
+             });
+        })
+    </script>
 {% endblock %}
