feat: add checkout styling and update Order model

--- a/bag/templates/bag/checkout-buttons.html
+++ b/bag/templates/bag/checkout-buttons.html
@@ -7,7 +7,7 @@
     </a>
 
     <!-- Checkout Button -->
-    <a href="" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
+    <a href="{% url 'checkout' %}" class="ib-button ib-button-blue text-decoration-none text-ib-light font-title weight-bold ms-2 shadow-sm">
         <p class="d-inline me-1">CHECKOUT</p>
         <i class="fas fa-lock d-inline"></i>
     </a>
