--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -140,25 +140,25 @@
         <div class="main">
             <div class="container-hex-grid">
                 <div class="py-5">
-                    <a class="text-decoration-none text-yellow" href="">
+                    <a class="text-decoration-none text-yellow" href="{% url 'products' %}?category=the_bees">
                         <i class="fas fa-bug text-center w-100 category-icon-lg mt-1 mb-2"></i>
                         <p class="text-center">THE BEES</p>
                     </a>
                 </div>
                 <div class="py-5">
-                    <a class="text-decoration-none text-yellow" href="">
+                    <a class="text-decoration-none text-yellow" href="{% url 'products' %}?category=the_kit">
                         <i class="fas fa-box text-center w-100 category-icon-lg mt-1 mb-2"></i>
                         <p class="text-center">THE KIT</p>
                     </a>
                 </div>
                 <div class="py-5">
-                    <a class="text-decoration-none text-yellow" href="">
+                    <a class="text-decoration-none text-yellow" href="{% url 'products' %}?category=courses">
                         <i class="fas fa-graduation-cap text-center w-100 category-icon-lg mt-1 mb-2"></i>
                         <p class="text-center">COURSES</p>
                     </a>
                 </div>
                 <div class="py-5">
-                    <a class="text-decoration-none text-yellow" href="">
+                    <a class="text-decoration-none text-yellow" href="{% url 'products' %}?category=produce">
                         <i class="fas fa-jar text-center w-100 category-icon-lg mt-1 mb-2"></i>
                         <p class="text-center">PRODUCE</p>
                     </a>
