--- a/products/templates/products/products.html
+++ b/products/templates/products/products.html
@@ -134,7 +134,7 @@
                                     <div class="col-6 ps-0 mt-auto d-flex justify-content-end">
                                         
                                         <!-- Product Price -->
-                                        <div class=""><p class="card-price weight-semibold">£{{ product.price }}</p></div>
+                                        <div class=""><p class="card-price weight-semibold ib-lh-1">£{{ product.price }}</p></div>
                                     </div>
                                 </div>
                             </div>
