--- a/reviews/templates/reviews/edit_review.html
+++ b/reviews/templates/reviews/edit_review.html
@@ -35,11 +35,11 @@
                 <div class="rating-form-div" aria-hidden="true">
                     <p class="font-body weight-semibold m-0">Your Rating *</p>
                     <div class="rating-div pe-0">
-                        <span class="rating-hex hex-1 {% if review.rating >= 1 %}rating-hex-selected{% endif %}" data-hex="1">&#x2B22;</span>
-                        <span class="rating-hex hex-2 {% if review.rating >= 2 %}rating-hex-selected{% endif %}" data-hex="2">&#x2B22;</span>
-                        <span class="rating-hex hex-3 {% if review.rating >= 3 %}rating-hex-selected{% endif %}" data-hex="3">&#x2B22;</span>
-                        <span class="rating-hex hex-4 {% if review.rating >= 4 %}rating-hex-selected{% endif %}" data-hex="4">&#x2B22;</span>
-                        <span class="rating-hex hex-5 {% if review.rating >= 5 %}rating-hex-selected{% endif %}" data-hex="5">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-1 {% if review.rating >= 1 %}rating-hex-selected{% endif %}" data-hex="1">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-2 {% if review.rating >= 2 %}rating-hex-selected{% endif %}" data-hex="2">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-3 {% if review.rating >= 3 %}rating-hex-selected{% endif %}" data-hex="3">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-4 {% if review.rating >= 4 %}rating-hex-selected{% endif %}" data-hex="4">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-5 {% if review.rating >= 5 %}rating-hex-selected{% endif %}" data-hex="5">&#x2B22;</span>
                     </div>
                 </div>
     
