--- a/reviews/templates/reviews/add_review.html
+++ b/reviews/templates/reviews/add_review.html
@@ -35,16 +35,16 @@
                 <div class="rating-form-div" aria-hidden="true">
                     <p class="font-body weight-semibold m-0">Your Rating *</p>
                     <div class="rating-div pe-0">
-                        <span class="rating-hex hex-1" data-hex="1">&#x2B22;</span>
-                        <span class="rating-hex hex-2" data-hex="2">&#x2B22;</span>
-                        <span class="rating-hex hex-3" data-hex="3">&#x2B22;</span>
-                        <span class="rating-hex hex-4" data-hex="4">&#x2B22;</span>
-                        <span class="rating-hex hex-5" data-hex="5">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-1" data-hex="1">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-2" data-hex="2">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-3" data-hex="3">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-4" data-hex="4">&#x2B22;</span>
+                        <span class="ib-lh-1 rating-hex hex-5" data-hex="5">&#x2B22;</span>
                     </div>
                 </div>
     
                 <div class="d-flex justify-content-center justify-content-sm-end mt-5">
-                    <a class="ib-button ib-button-grey me-3 text-decoration-none text-dark-grey font-title weight-bold shadow-sm" href="">CANCEL</a>
+                    <a class="ib-button ib-button-grey me-3 text-decoration-none text-dark-grey font-title weight-bold shadow-sm" href="{% url 'product_detail' product.id %}">CANCEL</a>
                     <button class="ib-button ib-button-yellow text-dark-grey font-title weight-bold shadow-sm" type="submit">SUBMIT</button>
                 </div>
                 
