--- a/templates/base.html
+++ b/templates/base.html
@@ -265,9 +265,13 @@
         <!-- Scroll to Top JS -->
         <script src="{% static 'js/scroll_top.js' %}"></script>
 
+        <!-- Toasts / Messages JS-->
         <script type="text/javascript">
             $('.toast').toast('show');
         </script>
+
+        <!-- Stripe JS -->
+        <script src="https://js.stripe.com/v3/"></script>
         
     {% endblock %}
 
