feat: add checkout success view & template

--- a/templates/includes/toasts/toast_error.html
+++ b/templates/includes/toasts/toast_error.html
@@ -9,7 +9,7 @@
     <div class="toast-header bg-ib-light text-ib-dark border-0 justify-content-between">
         <div class="">
             <p class="me-auto my-auto weight-bold font-title">ERROR!</p>
-            <div class="font-body mt-1">
+            <div class="font-body mt-1 text-break">
                 {{ message }}
             </div>
         </div>
